Add option to forward messages to another topic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-quarkus.native.resources.includes=pipe.yaml
-camel.main.routes-include-pattern=pipe.yaml
+quarkus.native.resources.includes=route.yaml
+camel.main.routes-include-pattern=route.yaml
 
 quarkus.kubernetes.idempotent=true
 quarkus.kubernetes.name=camel-kamelets-app
